refactor: update Java version to 17 and translate comments to English